syntax = "proto3";

package proto.v1;
option go_package = "/.;v1";

import "google/api/annotations.proto";
// =====================
// Health Check Service
// =====================
service Health {
  // Check the health status of the service and its dependencies
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
  }
}

// Request message for health check
message HealthCheckRequest {}

// Response message for health check
message HealthCheckResponse {
  string health_status = 1; // e.g., "SERVING", "NOT_SERVING"
  map<string, string> component_statuses = 2; // e.g., { "db": "OK", "kafka": "FAIL", "redis": "OK" }
}

// =====================
// Transaction Service
// =====================
service TrxHistoryService {
  // Get a list of transactions for a user
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse) {
    option (google.api.http) = {
      get: "/v1/transactions"
    };
  }

  // Store a new transaction
  rpc StoreTransaction(Transaction) returns (StoreTransactionResponse) {
    option (google.api.http) = {
      post: "/v1/transactions"
      body: "*"
    };
  }
}

// Request message for fetching transactions
message GetTransactionsRequest {
  string user_id = 1; // User ID to fetch transactions for
}

// Response message containing a list of transactions
message GetTransactionsResponse {
  repeated Transaction transactions = 1; // List of transactions
}

// Transaction message representing a single transaction
message Transaction {
  string id = 1;          // Transaction ID
  string user_id = 2;     // User ID
  double amount = 3;      // Transaction amount
  string description = 4; // Description of the transaction
  string timestamp = 5;   // Timestamp of the transaction
}

// Response message for storing a transaction
message StoreTransactionResponse {
  string status_message = 1; // Status message of the transaction
}