package history

import (
	"context"

	proto "gitlab.twprisma.com/fin/lmd/services/if-trx-history/api/proto/gen/v1"
)

type Service struct{}

func NewService() *Service {
	return &Service{}
}

func (s *Service) GetTransactions(ctx context.Context, req *proto.GetTransactionsRequest) (*proto.GetTransactionsResponse, error) {
	// Implement logic to fetch transactions
	return &proto.GetTransactionsResponse{
		Transactions: []*proto.Transaction{
			{
				Id:          "1",
				UserId:      req.UserId,
				Amount:      100.0,
				Description: "Sample transaction",
				Timestamp:   "2023-01-01T00:00:00Z",
			},
		},
	}, nil
}

func (s *Service) StoreTransaction(ctx context.Context, req *proto.Transaction) (*proto.StoreTransactionResponse, error) {
	// Implement logic to store a transaction
	return &proto.StoreTransactionResponse{
		StatusMessage: "Transaction stored successfully",
	}, nil
}
